# async-symm-crypto

./: Cargo.toml  LICENSE  README.md
src/: async_decrypt_task.rs  async_encrypt_task.rs  async_stream_dec_task.rs  async_stream_enc_task.rs  lib.rs  stream_cypher_op.rs
tests/: test_async_encrypt_decrypt.rs
