[package]
name = "async_symm_crypto"
version = "0.1.0"
edition = "2021"
description = "An async openssl symmetric cryptography."
repository = "https://github.com/didoloan/async-symm-crypto.git"
homepage = "https://github.com/didoloan/async-symm-crypto.git"
license = "MIT"


[dependencies]
bytes = "1.9.0"
futures = "0.3.31"
openssl = "0.10.63"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt"] }
