[package]
name = "async_symm_crypto"
version = "0.1.1"
edition = "2021"
description = "An async openssl symmetric cryptography."
repository = "https://github.com/didoloan/async-symm-crypto.git"
homepage = "https://github.com/didoloan/async-symm-crypto.git"
license = "MIT"


[dependencies]
bytes = "1.9.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await", "alloc", "std"] }
openssl = "0.10.63"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt"] }
